add pinned and bookmarked icons

--- a/search/index.html
+++ b/search/index.html
@@ -10,6 +10,10 @@
               height: 100%;
               width: 100%;
             }
+            .search-pinned{
+              position: absolute !important;
+              right: 40px !important;
+            }
     </style>
     <!--Import Google Icon Font-->
     <link
