--- a/search/index.html
+++ b/search/index.html
@@ -14,6 +14,21 @@
               position: absolute !important;
               right: 40px !important;
             }
+
+            .collection{
+              background: black !important;
+              color: white !important;
+              border: none !important;
+            }
+            .results{
+              min-height: 2000px;
+            }
+            .collection-item{
+              background: black !important;
+              color: white !important;
+              border: none !important;
+              border-bottom: 1px solid;
+            }
     </style>
     <!--Import Google Icon Font-->
     <link
