--- a/search/index.html
+++ b/search/index.html
@@ -57,6 +57,12 @@
         }, 200);
       };
     </script>
+    <link
+      rel="search"
+      type="application/opensearchdescription+xml"
+      title="Private Search"
+      href="/js/search.xml"
+    />
   </head>
   <body></body>
 </html>
