--- a/search/index.html
+++ b/search/index.html
@@ -6,8 +6,44 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <title>!!</title>
     <style>
+
+    /* fallback */
+    @font-face {
+      font-family: 'Material Icons';
+      font-style: normal;
+      font-weight: 400;
+      src: url(css/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
+    }
+
+    .material-icons {
+      font-family: 'Material Icons';
+      font-weight: normal;
+      font-style: normal;
+      font-size: 24px;
+      line-height: 1;
+      letter-spacing: normal;
+      text-transform: none;
+      display: inline-block;
+      white-space: nowrap;
+      word-wrap: normal;
+      direction: ltr;
+      -moz-font-feature-settings: 'liga';
+      -moz-osx-font-smoothing: grayscale;
+    }
+      html,
+      body {
+        background: black !important;
+        color: white !important;
+        height: 100%;
+      }
+      i{
+        color: #bdbdbd !important;
+      }
       body {
         height: 100%;
+        width: 100%;
+      }
+      .pushpin {
         width: 100%;
       }
       .search-pinned {
@@ -21,6 +57,7 @@
       }
 
       .collection {
+
         background: black !important;
         color: white !important;
         border: none !important;
@@ -35,12 +72,6 @@
         border-bottom: 1px solid;
       }
     </style>
-    <!--Import Google Icon Font-->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <!--Import materialize.css-->
     <link
       type="text/css"
       rel="stylesheet"
@@ -54,6 +85,9 @@
         setTimeout(function() {
           var elems = document.querySelectorAll(".modal");
           var instances = M.Modal.init(elems, {});
+
+          var elems = document.querySelectorAll(".pushpin");
+          //var instances = M.Pushpin.init(elems, { top: 100 });
         }, 200);
       };
     </script>
@@ -64,5 +98,6 @@
       href="/js/search.xml"
     />
   </head>
-  <body></body>
+  <body class="black"></body>
+</html>
 </html>
