--- a/search/index.html
+++ b/search/index.html
@@ -39,6 +39,10 @@
       i{
         color: #bdbdbd !important;
       }
+      .chip{
+
+        background: #9e9e9e  !important;
+      }
       body {
         height: 100%;
         width: 100%;
