--- a/search/index.html
+++ b/search/index.html
@@ -103,6 +103,6 @@
       href="/js/search.xml"
     />
   </head>
-  <body class="black"></body>
+  <body class="black dark"></body>
 </html>
 </html>
