remove spawn not needed for pinning

--- a/search/index.html
+++ b/search/index.html
@@ -36,6 +36,9 @@
         color: white !important;
         height: 100%;
       }
+      .modal-content{
+        color: black!important;
+      }
       i{
         color: #bdbdbd !important;
       }
